# Simple_Game_Engine

./: .gitmodules  CMakeLists.txt  Diagram.puml  README.md  diagram.drawio
Demo/include/: GameInputComponent.h
Demo/include/snake/: CounterTextObject.h  ExitButtonInputComponent.h  SnakeBody.h  SnakeHead.h  SnakeInputComponent.h  SnakeRoot.h  SnakeWorld.h  TextObject.h
Demo/src/: GameInputComponent.cpp  GameInputComponent.h  main.cpp
Demo/src/snake/: ExitButtonInputComponent.cpp  ExitButtonInputComponent.h  SnakeBody.cpp  SnakeHead.cpp  SnakeHead.h  SnakeInputComponent.cpp  SnakeInputComponent.h  SnakeRoot.cpp  SnakeWorld.cpp  SnakeWorld.h  TextObject.cpp
doc/: Diagram.asta  diagram.drawio
include/: GameEvent.h  GameEventType.h  GraphicsComponent.h  InputComponent.h  InputHandler.h  PhysicsComponent.h  SimpleObject.h
lib/SDL2/: sdl2-config.cmake
lib/SDL2/include/: SDL_assert.h  SDL_audio.h  SDL_config_macosx.h  SDL_config_macosx.h.orig  SDL_config_minimal.h  SDL_config_windows.h  SDL_cpuinfo.h  SDL_events.h  SDL_gamecontroller.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_locale.h  SDL_log.h  SDL_misc.h  SDL_power.h  SDL_render.h  SDL_scancode.h  SDL_sensor.h  SDL_syswm.h  SDL_test.h  SDL_test_crc32.h  SDL_test_images.h  SDL_test_log.h  SDL_thread.h  SDL_vulkan.h  begin_code.h
lib/SDL2/test/: CMakeLists.txt  checkkeys.c  checkkeysthreads.c  loopwave.c  loopwavequeue.c  testaudiocapture.c  testaudiohotplug.c  testaudioinfo.c  testautomation_main.c  testautomation_rect.c  testautomation_surface.c  testautomation_timer.c  testcustomcursor.c  testdisplayinfo.c  testdrawchessboard.c  testgamecontroller.c  testgles2_sdf.c  testhotplug.c  testime.c  testjoystick.c  testloadso.c  testlock.c  testmultiaudio.c  testnative.c  testoverlay2.c  testrendercopyex.c  testrumble.c  testscale.c  testshader.c  testshape.c  testspriteminimal.c  testthread.c  testtimer.c  testver.c  testvulkan.c
simple_game_engine/: CMakeLists.txt
simple_game_engine/base/include/: GameEvent.h  GraphicsComponent.h  PhysicsComponent.h
simple_game_engine/base/src/: ContainerObject.cpp  GameEvent.cpp  GameObject.cpp  GraphicsComponent.cpp  InputHandler.cpp  PhysicsComponent.cpp  SimpleObject.cpp
simple_game_engine/common_elements/include/: CounterTextObject.h  TextObject.h
simple_game_engine/common_elements/src/: CounterTextObject.cpp  TextObject.cpp
simple_game_engine/extra/include/: CounterTextObject.h
simple_game_engine/extra/src/: TextObject.cpp
simple_game_engine/include/: ContainerObject.h  GameEventType.h  GameObject.h  InputComponent.h  PhysicsComponent.h
simple_game_engine/include/base/: ContainerObject.h  GameEventType.h  GameObject.h  InputComponent.h  SimpleObject.h  const.h
simple_game_engine/include/extra/: TextObject.h
simple_game_engine/lib/SDL2/include/: SDL.h  SDL_atomic.h  SDL_clipboard.h  SDL_config.h  SDL_config_android.h  SDL_config_pandora.h  SDL_config_winrt.h  SDL_config_wiz.h  SDL_error.h  SDL_filesystem.h  SDL_gesture.h  SDL_haptic.h  SDL_keycode.h  SDL_main.h  SDL_metal.h  SDL_mouse.h  SDL_mutex.h  SDL_quit.h  SDL_rwops.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_test_assert.h  SDL_test_common.h  SDL_test_compare.h  SDL_test_font.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_md5.h  SDL_test_memory.h  SDL_test_random.h  SDL_timer.h  SDL_touch.h  SDL_version.h  SDL_video.h
simple_game_engine/lib/SDL2/test/: controllermap.c  testautomation.c  testautomation_audio.c  testautomation_platform.c  testautomation_render.c  testautomation_syswm.c  testdropfile.c  testerror.c  testevdev.c  testgl2.c  testgles.c  testgles2.c  testhaptic.c  testkeys.c  testmessage.c  testnative.h  testpower.c  testrendertarget.c  testsem.c  testsensor.c  testsprite2.c  teststreaming.c  testviewport.c  testwm2.c  torturethread.c
simple_game_engine/lib/SDL2_image/: sdl2_image-config.cmake
simple_game_engine/lib/SDL_TTF/: sdl2_ttf-config.cmake
simple_game_engine/src/: ContainerObject.cpp  GameObject.cpp  GraphicsComponent.cpp  InputComponent.cpp  InputHandler.cpp  PhysicsComponent.cpp
simple_game_engine/src/base/: CMakeLists.txt  ContainerObject.cpp  GameObject.cpp  InputComponent.cpp  InputHandler.cpp  PhysicsComponent.cpp
simple_game_engine/src/extra/: CMakeLists.txt  CounterTextObject.cpp
simple_game_engine/test/: CMakeLists.txt  TestGameObject.cpp  basic_test.cpp
src/: ContainerObject.cpp  GameEvent.cpp  GraphicsComponent.cpp  InputComponent.cpp  InputHandler.cpp  PhysicsComponent.cpp  SimpleObject.cpp
test/: CMakeLists.txt
